--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -1,15 +1,27 @@
+body{
+    background-image: url('fondo.jpg');
+    background-position: center;
+    text-align: center;
+    box-sizing: border-box;
+}
 h1{
     color:blue;
 }
 img{
-    width:400px;
+    width:300px;
+    height: 200px;
 }
 #thirdDiv{
-    width:600px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width:100%;
+    max-width: 1180px;
     height:500px;
-    background-color: chocolate;
+    background-color: lightgreen;
     padding: 50px;
-    border: 2px solid green;
+    margin: 20px;
+    border: 5px solid yellowgreen;
 }
 #spanId{
     font-size: 18px;
